@@ -138,7 +138,8 @@ export class KeyResultDetailComponent implements OnInit, OnDestroy {
   openCheckInForm() {
     const dialogRef = this.dialogService.open(CheckInFormComponent, {
       data: {
-        keyResult: this.keyResult$.getValue()
+        keyResult: this.keyResult$.getValue(),
+        checkIn: this.keyResult$.getValue().lastCheckIn
       }
     });
     dialogRef.afterClosed()
